# agente-cnpj

./: .env.example  .gitignore  README.md  abrir_agente_cnpj.bat  app.py  exemplo_cnpjs.csv  exemplo_cnpjs.txt  main.py  package.json  pyproject.toml
.github/workflows/: tests.yml
agente_cnpj/: __init__.py  cli.py  client.py  cnpj.py  gest_db.py
docs/: GEST_READ_ONLY_POLICY.md
services/: __init__.py  auth.py
services/credit/: __init__.py  client.py  config.py  providers.py  storage.py
services/serasa/: __init__.py  client.py  mock.py  storage.py
src/main/: database.js  main.js  preload.js
src/renderer/: app.js  index.html  styles.css
src/renderer/pages/: inteligenciaComercial.js
src/server/: server.js
src/services/: brasilApiService.js  cnpjService.js  cnpjWsService.js  scoreService.js
src/utils/: cnpjValidator.js
tests/: test_bureau_config.py  test_client.py  test_cnpj.py  test_credit_provider.py  test_gest_history.py  test_serasa.py
web/: app.js  index.html  styles.css
