[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agente-cnpj"
version = "0.1.0"
description = "Agente local para validar CNPJ, consultar dados publicos e apoiar analise de credito"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
  "ruff>=0.4.0",
]

[project.scripts]
agente-cnpj = "agente_cnpj.cli:main"

[tool.setuptools.packages.find]
include = ["agente_cnpj*", "services*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
